// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Element Class Instance Methods append: Appends New Element 1`] = `
Element {
  "_dom": Object {
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "elements": Array [
              Object {
                "attributes": Object {
                  "Name": "TagName",
                },
                "elements": Array [],
                "name": "Tag",
                "type": "element",
              },
            ],
            "name": "Tags",
            "type": "element",
          },
          Object {
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "elements": Array [
                      Object {
                        "attributes": Object {
                          "Name": "AnotherTagName",
                        },
                        "elements": Array [],
                        "name": "Tag",
                        "type": "element",
                      },
                    ],
                    "name": "Tags",
                    "type": "element",
                  },
                ],
                "name": "Program",
                "type": "element",
              },
            ],
            "name": "Programs",
            "type": "element",
          },
          Object {
            "name": "Tags",
            "type": "element",
          },
        ],
        "name": "Controller",
        "type": "element",
      },
    ],
    "name": "root",
    "type": "element",
  },
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Element Class Instance Methods append: Appends New Element 2`] = `
Element {
  "_dom": Object {
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "elements": Array [
              Object {
                "attributes": Object {
                  "Name": "TagName",
                },
                "elements": Array [],
                "name": "Tag",
                "type": "element",
              },
            ],
            "name": "Tags",
            "type": "element",
          },
          Object {
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "elements": Array [
                      Object {
                        "attributes": Object {
                          "Name": "AnotherTagName",
                        },
                        "elements": Array [],
                        "name": "Tag",
                        "type": "element",
                      },
                    ],
                    "name": "Tags",
                    "type": "element",
                  },
                ],
                "name": "Program",
                "type": "element",
              },
            ],
            "name": "Programs",
            "type": "element",
          },
          Object {
            "elements": Array [
              Object {
                "attributes": Object {
                  "Name": "SomeTag",
                  "TagType": "Base",
                },
                "name": "Tag",
                "type": "element",
              },
            ],
            "name": "Tags",
            "type": "element",
          },
        ],
        "name": "Controller",
        "type": "element",
      },
    ],
    "name": "root",
    "type": "element",
  },
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Element Class Instance Methods find: Finds Document Elements and Returns New Document 1`] = `
Array [
  Element {
    "_dom": Object {
      "elements": Array [
        Object {
          "elements": Array [
            Object {
              "attributes": Object {
                "Name": "TagName",
              },
              "elements": Array [],
              "name": "Tag",
              "type": "element",
            },
          ],
          "name": "Tags",
          "type": "element",
        },
        Object {
          "elements": Array [
            Object {
              "elements": Array [
                Object {
                  "elements": Array [
                    Object {
                      "attributes": Object {
                        "Name": "AnotherTagName",
                      },
                      "elements": Array [],
                      "name": "Tag",
                      "type": "element",
                    },
                  ],
                  "name": "Tags",
                  "type": "element",
                },
              ],
              "name": "Program",
              "type": "element",
            },
          ],
          "name": "Programs",
          "type": "element",
        },
      ],
      "name": "Controller",
      "type": "element",
    },
    "elem_id": "33cb4159377b63ce9db11667160e39df",
  },
]
`;

exports[`Element Class Instance Methods find: Finds Document Elements and Returns New Document 2`] = `
Array [
  Element {
    "_dom": Object {
      "attributes": Object {
        "Name": "TagName",
      },
      "elements": Array [],
      "name": "Tag",
      "type": "element",
    },
    "elem_id": "33cb4159377b63ce9db11667160e39df",
  },
]
`;

exports[`Element Class Instance Methods find: Finds Document Elements and Returns New Document 3`] = `
Array [
  Element {
    "_dom": Object {
      "attributes": Object {
        "Name": "TagName",
      },
      "elements": Array [],
      "name": "Tag",
      "type": "element",
    },
    "elem_id": "33cb4159377b63ce9db11667160e39df",
  },
  Element {
    "_dom": Object {
      "attributes": Object {
        "Name": "AnotherTagName",
      },
      "elements": Array [],
      "name": "Tag",
      "type": "element",
    },
    "elem_id": "33cb4159377b63ce9db11667160e39df",
  },
]
`;

exports[`Element Class Instance Methods find: Finds Document Elements and Returns New Document 4`] = `
Array [
  Element {
    "_dom": Object {
      "attributes": Object {
        "Name": "TagName",
      },
      "elements": Array [],
      "name": "Tag",
      "type": "element",
    },
    "elem_id": "33cb4159377b63ce9db11667160e39df",
  },
]
`;

exports[`Element Class Instance Methods find: Finds Document Elements and Returns New Document 5`] = `
Array [
  Element {
    "_dom": Object {
      "attributes": Object {
        "Name": "AnotherTagName",
      },
      "elements": Array [],
      "name": "Tag",
      "type": "element",
    },
    "elem_id": "33cb4159377b63ce9db11667160e39df",
  },
]
`;

exports[`Element Class Instance Methods findOne: Finds First Document Element 1`] = `
Element {
  "_dom": Object {
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "attributes": Object {
              "Name": "TagName",
            },
            "elements": Array [],
            "name": "Tag",
            "type": "element",
          },
        ],
        "name": "Tags",
        "type": "element",
      },
      Object {
        "elements": Array [
          Object {
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Name": "AnotherTagName",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Program",
            "type": "element",
          },
        ],
        "name": "Programs",
        "type": "element",
      },
    ],
    "name": "Controller",
    "type": "element",
  },
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Element Class Instance Methods findOne: Finds First Document Element 2`] = `
Element {
  "_dom": Object {
    "attributes": Object {
      "Name": "AnotherTagName",
    },
    "elements": Array [],
    "name": "Tag",
    "type": "element",
  },
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Element Class Instance Methods findOne: Finds First Document Element 3`] = `
Element {
  "_dom": Object {
    "attributes": Object {
      "Name": "TagName",
    },
    "elements": Array [],
    "name": "Tag",
    "type": "element",
  },
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Element Class Instance Methods findOne: Finds First Document Element 4`] = `
Element {
  "_dom": Object {
    "attributes": Object {
      "Name": "TagName",
    },
    "elements": Array [],
    "name": "Tag",
    "type": "element",
  },
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Element Class Instance Methods get dom: Gets Dom Reference 1`] = `
Object {
  "elements": Array [
    Object {
      "elements": Array [
        Object {
          "elements": Array [
            Object {
              "attributes": Object {
                "Name": "TagName",
              },
              "elements": Array [],
              "name": "Tag",
              "type": "element",
            },
          ],
          "name": "Tags",
          "type": "element",
        },
        Object {
          "elements": Array [
            Object {
              "elements": Array [
                Object {
                  "elements": Array [
                    Object {
                      "attributes": Object {
                        "Name": "AnotherTagName",
                      },
                      "elements": Array [],
                      "name": "Tag",
                      "type": "element",
                    },
                  ],
                  "name": "Tags",
                  "type": "element",
                },
              ],
              "name": "Program",
              "type": "element",
            },
          ],
          "name": "Programs",
          "type": "element",
        },
      ],
      "name": "Controller",
      "type": "element",
    },
  ],
  "name": "root",
  "type": "element",
}
`;

exports[`Element Class Instance Methods toString: Generates Appropriate Output 1`] = `"<Controller><Tags><Tag Name=\\"TagName\\"/></Tags><Programs><Program><Tags><Tag Name=\\"AnotherTagName\\"/></Tags></Program></Programs></Controller>"`;

exports[`Element Class New Instance Initializes with Desired Document Model 1`] = `
Element {
  "_dom": Object {
    "attr": "value",
  },
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;
